2007-12-13  Ville Vainio  <vivainio@gmail.com>

	* iplib.py(raw_input): unix readline does not allow unicode in
	history, encode to normal string. After patch by Tiago.
	Close #201

2007-12-12  Ville Vainio  <vivainio@gmail.com>

	* genutils.py (abbrev_cwd): Terminal title now shows 2 levels of 
	current directory.
	
2007-12-12  Fernando Perez  <Fernando.Perez@colorado.edu>

	* IPython/Shell.py (_select_shell): add support for controlling
	the pylab threading mode directly at the command line, without
	having to modify MPL config files.  Added unit tests for this
	feature, though manual/docs update is still pending, will do later.

2007-12-11  Ville Vainio  <vivainio@gmail.com>

	* ext_rescapture.py: var = !cmd is no longer verbose (to facilitate
	use in scripts)

2007-12-07  Ville Vainio  <vivainio@gmail.com>

	* iplib.py, ipy_profile_sh.py: Do not escape # on command lines 
	anymore (to \#) - even if it is a comment char that is implicitly 
	escaped in some unix shells in interactive mode, it is ok to leave
	it in IPython as such.


2007-12-01  Robert Kern  <robert.kern@gmail.com>

	* IPython/ultraTB.py (findsource): Improve the monkeypatch to
	inspect.findsource(). It can now find source lines inside zipped
	packages.
	
	* IPython/ultraTB.py: When constructing tracebacks, try to use __file__
	in the frame's namespace before trusting the filename in the code object
	which created the frame.

2007-11-29  *** Released version 0.8.2

2007-11-25  Fernando Perez  <Fernando.Perez@colorado.edu>

	* IPython/Logger.py (Logger.logstop): add a proper logstop()
	method to fully stop the logger, along with a corresponding
	%logstop magic for interactive use.

	* IPython/Extensions/ipy_host_completers.py: added new host
	completers functionality, contributed by Gael Pasgrimaud
	<gawel-AT-afpy.org>.

2007-11-24  Fernando Perez  <Fernando.Perez@colorado.edu>

	* IPython/DPyGetOpt.py (ArgumentError): Apply patch by Paul Mueller